# frvt

11/: all_report.txt  cal_ijball.py  cal_ijball_all.sh  cal_ijball_new.py  cal_mafa.py  cal_mr.py  cal_mr_frvt.py  cal_mr_ijba11.py  cal_mr_lfw.py  cal_mr_lfw_unrestricted.py  cal_mr_sd32.py  flip.py  generate_frvt_images.py  generate_input_data.py  generate_input_data_ijba11.py  generate_input_data_ijbc11_test1.py  generate_input_data_ijbc11_test2.py  generate_input_data_lfw.py  generate_mafa.py  linklib.sh  mark_eyes.py  mk_test.sh  plot_roc_curve.py  run_custom_test.sh  run_enroll_test.sh  run_ijba11.sh  run_ijbc11_test1.sh  run_mafa_test.sh  run_match_test.sh  run_my_test.sh  run_my_test1.sh  run_test.sh  run_validate_11.sh  tail_report.sh  test.sh  tool.py
11/input/: ijba11_split10_enroll.txt  ijba11_split10_match.txt  ijba11_split1_enroll.txt  ijba11_split1_match.txt  ijba11_split2_enroll.txt  ijba11_split2_match.txt  ijba11_split3_enroll.txt  ijba11_split3_match.txt  ijba11_split4_enroll.txt  ijba11_split4_match.txt  ijba11_split5_enroll.txt  ijba11_split5_match.txt  ijba11_split6_enroll.txt  ijba11_split6_match.txt  ijba11_split7_enroll.txt  ijba11_split7_match.txt  ijba11_split8_enroll.txt  ijba11_split8_match.txt  ijba11_split9_enroll.txt  ijba11_split9_match.txt  lfw_match.txt  mafa_enroll.txt  my_enroll.txt  my_enroll_small.txt  my_ijba11_enroll.txt  my_ijba11_match.txt  my_match.txt
11/scripts/: build_isap.sh  build_isap_impl4.sh  build_isap_impl5.sh  build_isap_impl6.sh  build_isap_impl6_debug.sh  build_isap_impl7.sh  build_isap_impl8.sh  compile_and_link.sh
11/src/isapmpl10/: CMakeLists.txt  aligner.h  kenxnetinterface.h  ncnn  nullimplfrvt11.cpp  nullimplfrvt11.h  rfb_api.h
11/src/isapmpl2/: CMakeLists.txt  nullimplfrvt11.cpp  nullimplfrvt11.h
11/src/isapmpl3/: CMakeLists.txt  nullimplfrvt11.cpp  nullimplfrvt11.h  tensorflow_mtcnn.cpp  tensorflow_mtcnn.hpp
11/src/isapmpl4/: CMakeLists.txt  MTCNN.cpp  MTCNN.h  nullimplfrvt11.cpp  nullimplfrvt11.h
11/src/isapmpl5/: CMakeLists.txt  makefile  nullimplfrvt11.cpp  nullimplfrvt11.h
11/src/isapmpl6/: CMakeLists.txt  nullimplfrvt11.cpp  nullimplfrvt11.h
11/src/isapmpl7/: CMakeLists.txt  nullimplfrvt11.cpp  nullimplfrvt11.h
11/src/isapmpl8/: CMakeLists.txt  FaceDetector.cpp  nullimplfrvt11.cpp  nullimplfrvt11.h  opencv  retinaface_api.h
11/src/isapmpl9/: CMakeLists.txt  LFFD.h  aligner.old.h  lffd_api.h  nullimplfrvt11.cpp  nullimplfrvt11.h  retinaface_api.h
11/src/testdriver/: validate11.cpp
